# gnu_magnetar

./: AUTHORS  ChangeLog  HACKING  Makefile.am  NEWS  README  TODO  args.C  args.h  auto-pilot.C  auto-pilot.h  buzzer.C  buzzer.h  castle.C  castle.h  challenging-stage.C  challenging-stage.h  cinematronics.C  configure.ac  difficulty.C  difficulty.h  ething.C  ething.h  fireball.C  fireball.h  font.h  game.C  game.h  global.h  icon.xpm  kapow.C  kapow.h  king.C  king.h  laser.C  laser.h  magnet-info.C  magnet-info.h  magnetar.1  menu.C  (+39 more)
sounds/: Makefile.am
