## Process this file with automake to produce Makefile.in
#      MAGNETAR
#      Copyright (c) 1993-2002 by Mark B. Hanson (mbh@panix.com).
#      Copyright (C) 2013 Ben Asselstine
# 
#   This program is free software; you can redistribute it and/or modify
#   it under the terms of the GNU General Public License as published by
#   the Free Software Foundation; version 2 of the License, or
#   (at your option) any later version.
# 
#   This program is distributed in the hope that it will be useful,
#   but WITHOUT ANY WARRANTY; without even the implied warranty of
#   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#   GNU General Public License for more details.
# 
#   You should have received a copy of the GNU General Public License
#   along with this program; if not, write to the Free Software
#   Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  
#   02110-1301, USA.
sounddir = $(MAGNETAR_DATADIR)
sound_DATA = \
	     bombexplosion.wav \
	     flak_gun_sound.wav \
	     bodyslam.wav \
	     magnetar.wav \
	     wave-complete.wav \
	     reward-obtained.wav \
	     level-begin.wav \
	     challenging-stage.wav \
	     reward-out.wav \
	     reward-in.wav \
	     coin-in.wav \
	     game-over.wav \
	     invert-polarity.wav \
	     congratulations.wav \
	     asteroid-leaving.wav \
	     deflect.wav \
	     magnets.wav \
	     thrust.wav \
	     bonus.ogg

EXTRA_DIST = ${sound_DATA}
